# USBSEC

./: pico-debug.cfg
.run/: pico_firmware.run.xml  pico_firmware_slave.run.xml
pico_firmware/: CMakeLists.txt
pico_firmware/.run/: pico_firmware_master.run.xml  pico_firmware_slave.run.xml
pico_firmware/debug/: pico-debug.cfg
pico_firmware/src/: main.c  main_spi_tusb.c
pico_firmware/src/legacy/: main.c  main_spi.c
pico_firmware/src/legacy/queueing/: queue.c  spi_queue.c  spi_queue.h
pico_firmware/src/legacy/test/: main.c
pico_firmware/src/legacy/usb_pio/: pio_usb.c  pio_usb.h  usb.pio
pico_firmware/src/lib/bit/: bit.h
pico_firmware/src/lib/debug/: debug.c  debug.h
pico_firmware/src/lib/direction_ctrl/: direction_ctrl.c  direction_ctrl.h
pico_firmware/src/lib/drivers/: drivers.c  drivers.h
pico_firmware/src/lib/edpt_registry/: edpt_registry.c  edpt_registry.h
pico_firmware/src/lib/event_queue/: event_queue.c  event_queue.h
pico_firmware/src/lib/messages/: masterslave.h  messages.c  messages.h  spi_data.c  spi_data.h
pico_firmware/src/lib/queueing/: event_queue.c  event_queue.h  queue.h
pico_firmware/src/lib/rp2040/: dcd_rp2040.c  hcd_rp2040.c  rp2040_usb.c  rp2040_usb.h
pico_firmware/src/lib/setup_response_aggregator/: setup_response_aggregator.c  setup_response_aggregator.h
pico_firmware/src/lib/usb_event_handlers/: device_event_handlers.c  host_event_handlers.c  usb_event_handlers.c  usb_event_handlers.h
pico_firmware/src/lib/usb_phy/: usb_host.c  usb_phy.c  usb_phy.h
pico_firmware/src/lib/usb_phy/inc/: usb_phy_api.h
pico_firmware/src/lib/validator/: validator.c  validator.h
pico_firmware/src/test/: main_spi_test.c
usb_phy/: usb_common.h  usb_host.h  usb_phy.h
